--- a/style.css
+++ b/style.css
@@ -1,3 +1,78 @@
-body{
-    font-family: 'Times New Roman', Times, serif;
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #f9f9f9;
+    font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.head {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    background-color: #f9f9f9
+}
+
+header {
+    background-color: #ffffff;
+    padding: 15px 25px;
+    border-radius: 20px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.items ul {
+    display: flex;
+    gap: 25px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.items li button {
+    padding: 7px 25px;
+    border: none;
+    background-color: #898989;
+    color: white;
+    cursor: pointer;
+    border-radius: 20px;
+    transition: background-color 0.3s;
+}
+
+.items li button a {
+    text-decoration: none;
+    color: white;
+}
+
+.items li button:hover {
+    background-color: #0056b3;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+    text-align: center;
+}
+
+.img img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    box-shadow: 50px rgba(0, 0, 0, 0.1);
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column;
+}
+
+.buttos button{
+    text-decoration: none;
+}
+.produtos {
+    background-color: black;
+    text-decoration: none;
 }
