--- a/produtos.css
+++ b/produtos.css
@@ -20,6 +20,7 @@ header {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
+
 .items ul {
     display: flex;
     gap: 25px;
@@ -47,49 +48,20 @@ header {
     background-color: #0056b3;
 }
 
-.container {
+.products {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    margin-top: 40px;
+    padding: 1px;
+}
+
+.card {
+    background-color: #ffffff;
+    width: 900px;
+    height: 650px;
+    border-radius: 10px;
+}
+
+.products h2{
     text-align: center;
+    color: black;
 }
-
-.img img {
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-    border-radius: 50%;
-    box-shadow: 50px rgba(0, 0, 0, 0.1);
-}
-
-.buttons {
-    display: flex;
-    flex-direction: column;
-    height: 200px;
-    padding: 10px;
-    
-}
-
-.buttons button{
-    border: none;
-    border-radius: 5rem;
-    margin-top: 5%;
-    padding: 7px 25px;
-}
-.buttons a{
-    text-decoration: none;
-    color: #eeeded;
-}
-.buttonProdutos{
-    background-color: #666;
-}
-.buttonContato{
-    background-color: #666;
-}
-.buttons button:hover {
-    background-color: #0056b3;
-    transition: .7s;
-}
-
