--- a/produtos.css
+++ b/produtos.css
@@ -48,20 +48,11 @@ header {
     background-color: #0056b3;
 }
 
-.products {
-    display: flex;
-    justify-content: center;
-    padding: 1px;
-}
-
-.card {
-    background-color: #ffffff;
-    width: 900px;
-    height: 650px;
-    border-radius: 10px;
-}
-
-.products h2{
-    text-align: center;
-    color: black;
+.container {
+  background: #fff;
+  border-radius: 12px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  padding: 24px;
+  max-width: 1800px;
+  margin: 0 auto 0 auto;
 }
