--- a/produtos.css
+++ b/produtos.css
@@ -49,10 +49,37 @@ header {
 }
 
 .container {
-  background: #fff;
+  background: #eeeded;
   border-radius: 12px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   padding: 24px;
   max-width: 1800px;
-  margin: 0 auto 0 auto;
+  margin: 0px auto 20.5px auto; 
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); 
+  gap: 40px;
+}
+
+.card {
+  background-color: #ffffff;
+  padding: 24px;
+  border-radius: 16px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 340px;
+  max-width: 100%;
+}
+
+.card h3 {
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 10px;
+  margin-top: 0;
+  color: #333;
+}
+
+.card p {
+  font-size: 16px;
+  color: #555;
+  margin-top: 12px;
 }
