--- a/style.css
+++ b/style.css
@@ -52,8 +52,9 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 40px;
+    margin: auto;
     text-align: center;
+    height: 100%;
 }
 
 .img img {
